apps/audiobookshelf/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audiobookshelf
  namespace: audiobookshelf
  labels:
    app.kubernetes.io/name: audiobookshelf

spec:
  replicas: 1

  strategy:
    type: Recreate

  selector:
    matchLabels:
      app.kubernetes.io/name: audiobookshelf

  template:
    metadata:
      labels:
        app.kubernetes.io/name: audiobookshelf

    spec:
      terminationGracePeriodSeconds: 30

      containers:
        - name: audiobookshelf
          image: ghcr.io/advplyr/audiobookshelf:2.36.1
          imagePullPolicy: Always

          command:
            - tini
            - --
            - /bin/sh
            - -c

          args:
            - |
              [...]
          ports:
            - name: http
              containerPort: 80
              hostPort: 3001
              protocol: TCP

          volumeMounts:
            - name: application-data
              mountPath: /config
              subPath: config

            - name: application-data
              mountPath: /metadata
              subPath: metadata

            - name: media
              mountPath: /audiobooks
              subPath: Audiobooks

            - name: media
              mountPath: /podcasts
              subPath: Podcasts

          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              memory: 2Gi

      volumes:
        - name: application-data
          persistentVolumeClaim:
            claimName: audiobookshelf-data

        - name: media
          persistentVolumeClaim:
            claimName: audiobookshelf-media
